[project]
name = "mempool_ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "joao", email = "joao@.com"},
]
dependencies = [
    "web3>=6.19.0",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
