[project]
name = "ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "joao", email = "joao@.com"},
]
dependencies = [
    "tensorflow>=2.15.1",
    "pandas>=2.2.2",
    "sklearn>=0.0.post12",
    "scikit-learn>=1.5.0",
    "keras-tuner>=1.4.7",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
